<resources>
    <string name="app_name">Mic Switcher</string>
    <string name="select_device_prompt">Pick a microphone input</string>
    <string name="refresh_devices">Refresh devices</string>
    <string name="start_recording">Start recording</string>
    <string name="clear_override">Clear system call mic override</string>
    <string name="tile_label">Mic input</string>
    <string name="tile_no_inputs">No inputs found</string>
    <string name="tile_tap_to_choose">Tap to choose</string>
    <string name="mic_level_label">Mic level</string>
    <string name="test_mic">Test mic</string>
    <string name="stop_test">Stop test</string>
    <string name="theme_system">Theme: System</string>
    <string name="credit_text">vibecoded by snysik1337</string>
</resources>
